you can now see a list of users

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
 	
 	<div id="main">
 		<h1>Logged in as <span class="username">error</span></h1>
+		
+		<ul id="users">
+			
+		</ul>
 	</div>
 	
 </html>
