- Added the ability to toggle the status on another user

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,16 @@
 		<title>[codename] Amber Alert</title>		
 		<script src="/javascripts/jquery-1.4.2.min.js"></script>
 		<script src="/javascripts/client.js"></script>
+		
+		<style type="text/css" media="screen">
+			.pending {
+				background-color:yellow;
+			}
+			
+			.notified {
+				background-color:red;
+			}
+		</style>
 	</head>
 	
 	<div id="login">
@@ -17,6 +27,8 @@
 	
 	<div id="main">
 		<h1>Logged in as <span class="username">error</span></h1>
+		
+		<h2>Other users:</h2>
 		
 		<ul id="users">
 			
